Added another dependency

--- a/packages/ui/src/lib/text/text.module.scss
+++ b/packages/ui/src/lib/text/text.module.scss
@@ -16,3 +16,15 @@
 .error {
   color: #ff0000;
 }
+
+.center {
+  text-align: center;
+}
+
+.right {
+  text-align: right;
+}
+
+.left {
+  text-align: left;
+}
