--- a/packages/web/src/styles/loader.module.scss
+++ b/packages/web/src/styles/loader.module.scss
@@ -1,15 +1,9 @@
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
+@import './sass/keyframes';
+@import './sass/variables';
 
 .loader {
-  border: 5px solid #f3f3f3;
-  border-top: 5px solid #3498db;
+  border: 5px solid $white;
+  border-top: 5px solid $blue;
   border-radius: 50%;
   width: 32px;
   height: 32px;
