--- a/packages/web/src/styles/sass/_elements.scss
+++ b/packages/web/src/styles/sass/_elements.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;700&display=swap');
+
 html {
   body {
     background: $black;
@@ -11,14 +13,19 @@ html {
   }
 }
 
-* {
-  box-sizing: border-box;
+input,
+textarea,
+button,
+select,
+optgroup,
+option {
   font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+* {
+  box-sizing: border-box;
 }
 
 ::-webkit-scrollbar {
@@ -37,4 +44,13 @@ a {
 
 ::-webkit-scrollbar-corner {
   background: transparent;
+}
+
+p {
+  font-family: 'DM Sans', sans-serif;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
