--- a/apps/web/src/styles/sass/_variables.scss
+++ b/apps/web/src/styles/sass/_variables.scss
@@ -8,6 +8,7 @@ $dimmed: #9ca3af;
 $blue: #4fc3f7;
 $red: #f87171;
 $darker-zinc: #212121;
+$medium-zinc: #3f3f46;
 $zinc: #2c2c2c;
 $divider: #343437;
 $font: 'Nunito', 'DM Sans', system-ui, -apple-system, BlinkMacSystemFont,
