--- a/apps/web/src/styles/sass/_keyframes.scss
+++ b/apps/web/src/styles/sass/_keyframes.scss
@@ -45,3 +45,14 @@
     background-position-x: -200%;
   }
 }
+
+@keyframes menu-dropdown {
+  0% {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
